<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <!-- TODO: Add necessary string values -->
    <string name="application_logo_description">Application Logo</string>
    <string name="upcoming_button">UPCOMING ELECTIONS</string>
    <string name="representative_button">FIND MY REPRESENTATIVES</string>
    <string name="upcoming_elections">UPCOMING ELECTIONS</string>
    <string name="saved_elections">SAVED ELECTIONS</string>
    <string name="follow_unfollow_button">FOLLOW</string>
    <string name="representative_search">Representative Search</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="find_my_representatives">FIND MY REPRESENTATIVES</string>
    <string name="use_my_location">USE MY LOCATION</string>
    <string name="my_representatives">My Representatives</string>
    <string name="representative_title">Representative Title</string>
    <string name="representative_name">Representative Name</string>
    <string name="representative_party">Representative Party</string>
    <string name="website">Webiste</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="follow_button">FOLLOW</string>
    <string name="unfollow_button">UNFOLLOW</string>

</resources>
