<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- TODO: Add data binding node -->
    <data>
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <!-- TODO: Add motion scene to hide form on vertical scroll. -->
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layoutDescription="@xml/fragment_representative_scene">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_normal" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_normal" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/margin_normal" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/margin_normal" />

        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/search_title"
            style="@style/header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/representative_search"
            android:layout_marginTop="@dimen/margin_normal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart" />

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/address_line_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/address_line_1"
            android:inputType="textPostalAddress"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/search_title"
            android:text="@{viewModel.address.line1}"/>

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/address_line_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/address_line_2"
            android:inputType="textPostalAddress"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/address_line_1"
            android:text="@{viewModel.address.line2}"/>

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/city"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintTop_toBottomOf="@id/address_line_2"
            android:text="@{viewModel.address.city}"/>

        <!-- TODO: Add default values from provided resources  -->
        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <Spinner
            android:id="@+id/state"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints=""
            android:entries="@array/states"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintTop_toTopOf="@id/city"
            app:layout_constraintBottom_toBottomOf="@id/city"
            app:stateValue="@{viewModel.address.state}"/>

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/zip"
            android:inputType="number"
            android:maxLength="5"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toEndOf="@id/city"
            app:layout_constraintTop_toBottomOf="@id/city"
            android:text="@{viewModel.address.zip}"/>

        <!-- TODO: Add visual styling and label -->
        <Button
            android:id="@+id/button_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/find_my_representatives"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/zip"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            />

        <!-- TODO: Add visual styling and content -->
        <Button
            android:id="@+id/button_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/use_my_location"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/button_search"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"/>

        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/representative_title"
            style="@style/header"
            android:layout_width="0dp"
            android:text="@string/my_representatives"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/button_location" />

        <!-- TODO: Add Representatives RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_representatives"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/representative_title"
            tools:listitem="@layout/item_representative"/>

        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/list_placeholder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:textAlignment="center"
            android:visibility="gone"
            motion:visibilityMode="ignore"
            app:layout_constraintTop_toBottomOf="@id/representative_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>